add style and function for forgot-password component

--- a/src/app/startscreen/login/login.component.html
+++ b/src/app/startscreen/login/login.component.html
@@ -103,7 +103,7 @@
       </div>
     
       <span class="user-login-password-restore">
-        <a href="">Passwort vergessen ?</a>
+        <a (click)="onForgotPasswordLinkClick()">Passwort vergessen ?</a>
       </span>
       <div class="user-login-seperation">
         <div class="user-seperation-bar"></div>
