--- a/src/app/startscreen/startscreen.component.html
+++ b/src/app/startscreen/startscreen.component.html
@@ -9,11 +9,7 @@
         </div>
     </div>
     
-    <app-login
-    *ngIf="showLogin && !imprint && !privacyPolicy && !showAvatar && !showForgotPassword"
-    (forgotPasswordLinkClick)="onForgotPasswordLinkClick()"
-    (closeLoginView)="closeLogin()"
-    ></app-login>
+    <app-login *ngIf="showLogin && !imprint && !privacyPolicy && !showAvatar && !showForgotPassword"(forgotPasswordLinkClick)="onForgotPasswordLinkClick()"></app-login>
         <app-register *ngIf="showRegister && !showLogin && !imprint && !privacyPolicy && !showAvatar" (closeRegisterView)="closeRegister()"></app-register>
         <app-avatar-choose *ngIf="showAvatar && !showLogin" (closeAvatarView)="closeAvatar()"></app-avatar-choose>
         <app-forgot-password *ngIf="showForgotPassword" (closeForgotPasswordView)="closeForgotPassword()"></app-forgot-password>
