--- a/src/app/mainscreen/message/message.component.html
+++ b/src/app/mainscreen/message/message.component.html
@@ -1,6 +1,6 @@
 
 <div class='message-container' (click)="messageFirebaseService.openThread(_message)" [ngClass]="{'inverted': isOwnMessage}" *ngIf="_message" (mouseleave)="closeToolbar()" (mouseenter)="openToolbar()">
-    <app-toolbar *ngIf="showToolbar" [isOwnMessage]="isOwnMessage"></app-toolbar>
+    <app-toolbar *ngIf="showToolbar" [isOwnMessage]="isOwnMessage" [message]="_message"></app-toolbar>
     <img src="{{ autorAvatar }}" class="message-img" *ngIf="autorAvatar">
     <div class="message-content"  tabindex="0">
         <div class="message-head">
