--- a/src/app/mainscreen/message/message.component.scss
+++ b/src/app/mainscreen/message/message.component.scss
@@ -11,6 +11,7 @@
         height: 70px;
         padding: 10px;
         border-radius: 50%;
+        object-fit: cover;
     }
 
     .message-content {
