--- a/src/app/mainscreen/message/toolbar/toolbar.component.html
+++ b/src/app/mainscreen/message/toolbar/toolbar.component.html
@@ -7,7 +7,7 @@
         <img src="assets/img/icons/checkmark.svg">
         <img src="assets/img/icons/handsup.svg">
         <img src="assets/img/icons/addreactionplus.svg" (click)="toggleReactions($event)">
-        <img src="assets/img/icons/answer.svg">
+        <img *ngIf="message" src="assets/img/icons/answer.svg" (click)="messageFirebaseService.openThread(message)">
 
         <div *ngIf="isOwnMessage" (blur)="hideOptions($event)" class="message-edit-container">
             <button mat-icon-button (click)="toggleOptions($event)">
