emoji firebase connection established; emoji output added

--- a/src/app/mainscreen/channel/message-form/message-create.component.html
+++ b/src/app/mainscreen/channel/message-form/message-create.component.html
@@ -14,7 +14,8 @@
     class="msg-write-container" 
     [(ngModel)]="message.content"
     *ngIf="channelFirebaseService.selectedChannel"
-    placeholder="Nachricht an #{{ channelFirebaseService.selectedChannel.channelName }}" (click)="createMessage()">
+    placeholder="Nachricht an #{{ channelFirebaseService.selectedChannel.channelName }}"
+    (click)="closeEmojiList()">
 </textarea>
 </div>
 
