--- a/src/app/mainscreen/message/message.component.html
+++ b/src/app/mainscreen/message/message.component.html
@@ -1,20 +1,23 @@
-
-<div class='message-container' [ngClass]="{'inverted': isOwnMessage}" *ngIf="_message" (mouseleave)="closeToolbar()" (mouseenter)="openToolbar()">
-    <app-toolbar *ngIf="showToolbar" [isOwnMessage]="isOwnMessage" [message]="_message"></app-toolbar>
+<div class='message-container' [ngClass]="{'inverted': isOwnMessage}" *ngIf="_message" (mouseleave)="closeToolbar()"
+    (mouseenter)="openToolbar()">
+    <app-toolbar *ngIf="showToolbar" [isOwnMessage]="isOwnMessage" [message]="_message"
+        [messageLocation]="messageLocation"></app-toolbar>
     <img src="{{ autorAvatar }}" class="message-img" *ngIf="autorAvatar">
-    <div class="message-content"  tabindex="0">
+    <div class="message-content" tabindex="0">
         <div class="message-head">
             <div> {{ formatTimestampToHHMM(_message.timestamp) }}</div>
             <div *ngIf="autorName!=''"><b>{{ autorName }}</b></div>
         </div>
-        
-        <mat-card> 
-           
+
+        <mat-card>
+
             <mat-card-content>{{ _message.content }}</mat-card-content>
         </mat-card>
         <div class='message-footer'>
-            <app-reaction [count]="2"></app-reaction>
-            <img src="assets/img/icons/addreactionplus.svg">
+            <div *ngFor="let reaction of messageFirebaseService.loadedReactions">
+                <app-reaction [reaction]="reaction"></app-reaction>
+                <img src="assets/img/icons/addreactionplus.svg">
+            </div>
         </div>
     </div>
 </div>
