--- a/src/app/mainscreen/message/message.component.html
+++ b/src/app/mainscreen/message/message.component.html
@@ -1,7 +1,8 @@
 <div class='message-container' [ngClass]="{'inverted': isOwnMessage}" *ngIf="_message" (mouseleave)="closeToolbar()"
     (mouseenter)="openToolbar()">
     <app-toolbar *ngIf="showToolbar" [isOwnMessage]="isOwnMessage" [message]="_message"
-        [messageLocation]="messageLocation"></app-toolbar>
+        [messageLocation]="messageLocation" (emojiSelectedOutput)="handleEmojiSelection($event)">
+    </app-toolbar>
     <img src="{{ autorAvatar }}" class="message-img" *ngIf="autorAvatar">
     <div class="message-content" tabindex="0">
         <div class="message-head">
