--- a/src/app/startscreen/avatar-choose/avatar-choose.component.scss
+++ b/src/app/startscreen/avatar-choose/avatar-choose.component.scss
@@ -135,3 +135,43 @@
 .br-30 {
   border-radius: 30px;
 }
+
+@keyframes slide-in {
+  0% {
+    transform: translateY(100%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+@keyframes slide-out {
+  0% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+  100% {
+    transform: translateY(100%);
+    opacity: 0;
+  }
+}
+
+/* Wende die Animation auf das Element an */
+.success-message {
+  display: flex;
+  position: absolute;
+  top: 810px;
+  justify-content: center;
+  z-index: 100;
+  padding: 50px;
+  border-radius: 30px 30px 0px 30px;
+  max-width: 531px;
+  background: var(--Purple-1, #444DF2);
+  color: rgba(255, 255, 255, 1);
+  align-items: flex-start;
+  font-size: 36px;
+  box-shadow: 0px 6px 10px 0px rgba(0, 0, 0, 0.20);
+  animation: slide-in 0.5s ease-in-out, ;
+}
