--- a/src/app/startscreen/forgot-password/forgot-password.component.html
+++ b/src/app/startscreen/forgot-password/forgot-password.component.html
@@ -65,7 +65,7 @@
       </div>
       <div class="forgot-password-info-container">
         <div class="forgot-password-info-box">
-            Wird senden Ihnen eine E-Mail, über die Sie Ihr Passwort ändern können.
+            Wir senden Ihnen eine E-Mail, über die Sie Ihr Passwort ändern können.
         </div>
       </div>
     </form>
