add overlay for register

--- a/src/app/startscreen/avatar-choose/avatar-choose.component.html
+++ b/src/app/startscreen/avatar-choose/avatar-choose.component.html
@@ -41,7 +41,7 @@
   </div>
 
   <div *ngIf="avatarSubmitted" class="success-message">
-    Konto erfolgreich erstellt!
+    Anmelden
   </div>
 </mat-card>
 
