--- a/src/app/startscreen/register/register.component.html
+++ b/src/app/startscreen/register/register.component.html
@@ -205,4 +205,8 @@
       Weiter
     </button>
   </div>
+
+  <div *ngIf="createKonto" class="success-message">
+    Konto erfolgreich erstellt!
+  </div>
 </mat-card>
