--- a/src/app/startscreen/avatar-choose/avatar-choose.component.scss
+++ b/src/app/startscreen/avatar-choose/avatar-choose.component.scss
@@ -163,15 +163,16 @@
   display: flex;
   position: absolute;
   top: 810px;
+  left: 150px;
   justify-content: center;
   z-index: 100;
   padding: 50px;
   border-radius: 30px 30px 0px 30px;
   max-width: 531px;
-  background: var(--Purple-1, #444DF2);
+  background: rgba(68, 77, 242, 1);
   color: rgba(255, 255, 255, 1);
   align-items: flex-start;
   font-size: 36px;
   box-shadow: 0px 6px 10px 0px rgba(0, 0, 0, 0.20);
-  animation: slide-in 0.5s ease-in-out, ;
+  animation: slide-in 0.4s ease-in-out, slide-out 0.4s ease-in-out 1.5s;
 }
