delete overlay register

--- a/src/app/startscreen/avatar-choose/avatar-choose.component.html
+++ b/src/app/startscreen/avatar-choose/avatar-choose.component.html
@@ -40,9 +40,9 @@
     </button>
   </div>
 
-  <div *ngIf="avatarSubmitted" class="success-message">
-    Anmelden
-  </div>
+  
 </mat-card>
 
-
+<div *ngIf="avatarSubmitted" class="success-message">
+  Konto erfolgreich erstellt!
+</div>
