--- a/src/app/startscreen/avatar-choose/avatar-choose.component.scss
+++ b/src/app/startscreen/avatar-choose/avatar-choose.component.scss
@@ -138,22 +138,22 @@
 
 @keyframes slide-in {
   0% {
-    transform: translateY(100%);
+    transform: translateX(100%);
     opacity: 0;
   }
   100% {
-    transform: translateY(0);
+    transform: translateX(0);
     opacity: 1;
   }
 }
 
 @keyframes slide-out {
   0% {
-    transform: translateY(0);
+    transform: translateX(0);
     opacity: 1;
   }
   100% {
-    transform: translateY(100%);
+    transform: translateX(100%);
     opacity: 0;
   }
 }
@@ -162,13 +162,12 @@
 .success-message {
   display: flex;
   position: absolute;
-  top: 810px;
-  left: 150px;
+  right: 0px;
   justify-content: center;
   z-index: 100;
   padding: 50px;
   border-radius: 30px 30px 0px 30px;
-  max-width: 531px;
+  max-width: 530px;
   background: rgba(68, 77, 242, 1);
   color: rgba(255, 255, 255, 1);
   align-items: flex-start;
