--- a/src/app/mainscreen/message/message.component.scss
+++ b/src/app/mainscreen/message/message.component.scss
@@ -56,8 +56,15 @@
 
 
         .message-footer {
+
             display: flex;
             align-items: center;
+            flex-wrap: wrap;
+
+            .reaction-smileys {
+                display: flex;
+                
+            }
         }
 
 
