--- a/src/app/mainscreen/message/reaction/reaction.component.html
+++ b/src/app/mainscreen/message/reaction/reaction.component.html
@@ -1,3 +1,3 @@
 <div *ngIf="count">
-    <div matBadge="{{count}}" matBadgeOverlap="false" class="demo-section">{{ emoji }}</div>
+    {{ emoji }} {{count}}
 </div>
