--- a/src/app/mainscreen/message/message.component.html
+++ b/src/app/mainscreen/message/message.component.html
@@ -1,5 +1,5 @@
-<div class='message-container' [ngClass]="{'inverted': isOwnMessage}" *ngIf="_message" (mouseleave)="closeToolbar()"
-    (mouseenter)="openToolbar()">
+<div class='message-container' [ngClass]="{'inverted': isOwnMessage}" *ngIf="_message"
+    (mouseleave)="closeToolbar();closeEmojiBar()" (mouseenter)="openToolbar()">
     <app-toolbar *ngIf="showToolbar" [isOwnMessage]="isOwnMessage" [message]="_message"
         [messageLocation]="messageLocation" (emojiSelectedOutput)="handleEmojiSelection($event)">
     </app-toolbar>
@@ -15,17 +15,17 @@
             <mat-card-content>{{ _message.content }}</mat-card-content>
         </mat-card>
 
-
+        <app-addreaction *ngIf="showMessageReactions" class="message-reaction-options"
+            (emojiSelectedOutput)="handleEmojiSelection($event)"></app-addreaction>
         <div class='message-footer'>
             <div *ngFor="let reaction of messageFirebaseService.loadedReactions" class="reaction-smileys">
                 <div class="emoji-container">
-                    <app-reaction [reaction]="reaction"></app-reaction>
+                    <app-reaction [reaction]="reaction"
+                        (emojiSelectedOutput)="handleEmojiSelection($event)"></app-reaction>
                 </div>
             </div>
             <img src="assets/img/icons/addreactionplus.svg" (click)="toggleReactions($event)">
         </div>
-        <div *ngIf="showMessageReactions" class="message-reaction-options">
-            <app-addreaction (emojiSelectedOutput)="handleEmojiSelection($event)"></app-addreaction>
-        </div>
     </div>
+
 </div>
