add reset passwort in auth.firebase

--- a/src/app/startscreen/forgot-password/forgot-password.component.html
+++ b/src/app/startscreen/forgot-password/forgot-password.component.html
@@ -35,6 +35,7 @@
             name="email"
             (focus)="isInputActive = true"
             (blur)="isInputActive = false"
+            [(ngModel)]="email"
           />
         </div>
   
@@ -72,7 +73,7 @@
     
   
     <div class="forgot-password-button-container">
-        <button (click)="passwordReset()" class="blue-button" mat-raised-button [disabled]="isButtonDisabled()" [ngClass]="{ 'disabled-button': isButtonDisabled() }">
+        <button (click)="resetPassword()" class="blue-button" mat-raised-button [disabled]="isButtonDisabled()" [ngClass]="{ 'disabled-button': isButtonDisabled() }">
         E-Mail senden
       </button>
     </div>
