--- a/src/app/startscreen/avatar-choose/avatar-choose.component.scss
+++ b/src/app/startscreen/avatar-choose/avatar-choose.component.scss
@@ -170,8 +170,8 @@
   max-width: 530px;
   background: rgba(68, 77, 242, 1);
   color: rgba(255, 255, 255, 1);
-  align-items: flex-start;
   font-size: 36px;
   box-shadow: 0px 6px 10px 0px rgba(0, 0, 0, 0.20);
   animation: slide-in 0.4s ease-in-out, slide-out 0.4s ease-in-out 1.5s;
+  font-weight: 700;
 }
