--- a/src/app/mainscreen/message/addreaction/addreaction.component.html
+++ b/src/app/mainscreen/message/addreaction/addreaction.component.html
@@ -1,8 +1,4 @@
-<!--
-<div #container class="emoji-picker-container reaction-container">      
-</div>
--->
-  <emoji-mart
+  <emoji-mart #container
       class="picker"
       color="var(--str-chat__primary-color)"
       title="Pick your emoji…"
