Squashed commit of the following:
commit 66eb8dac54993bc523fd0172000609a92aef272a
Author: FabianKWirth <135059007+FabianKWirth@users.noreply.github.com>
Date:   Sun Nov 5 00:46:09 2023 +0100

    updated channel loading; only loads channels for current user

commit bd3ac77195a8f01d5d2efa93dc859a5429248bee
Author: FabianKWirth <135059007+FabianKWirth@users.noreply.github.com>
Date:   Sat Nov 4 22:46:01 2023 +0100

    updated open/close emoji bar

--- a/src/app/mainscreen/message/message.component.html
+++ b/src/app/mainscreen/message/message.component.html
@@ -1,6 +1,5 @@
-
-<div class='message-container' (click)="messageFirebaseService.openThread(_message)" [ngClass]="{'inverted': isOwnMessage}" *ngIf="_message"
-    (mouseleave)="closeToolbar();closeEmojiBar()" (mouseenter)="openToolbar()">
+<div class='message-container' [ngClass]="{'inverted': isOwnMessage}" *ngIf="_message"
+    (mouseleave)="closeToolbar()" (mouseenter)="openToolbar()">
     <app-toolbar *ngIf="showToolbar" [isOwnMessage]="isOwnMessage" [message]="_message"
         [messageLocation]="messageLocation" (emojiSelectedOutput)="handleEmojiSelection($event)">
     </app-toolbar>
@@ -16,13 +15,17 @@
             <mat-card-content>{{ _message.content }}</mat-card-content>
         </mat-card>
 
-        <app-addreaction *ngIf="showMessageReactions" class="message-reaction-options"
-            (emojiSelectedOutput)="handleEmojiSelection($event)"></app-addreaction>
+        <app-addreaction 
+            *ngIf="showMessageReactions"
+            [isOpened]="showMessageReactions"
+            (emojiSelectedOutput)="handleEmojiSelection($event)" 
+            (emojiBarVisibilityOutput)="handleEmojiBarVisibility($event)">
+        </app-addreaction>
+
         <div class='message-footer'>
             <div *ngFor="let reaction of messageFirebaseService.loadedReactions" class="reaction-smileys">
                 <div class="emoji-container">
-                    <app-reaction [reaction]="reaction"
-                        (emojiSelectedOutput)="handleEmojiSelection($event)"></app-reaction>
+                    <app-reaction [reaction]="reaction" (emojiSelectedOutput)="handleEmojiSelection($event)" ></app-reaction>
                 </div>
             </div>
             <img src="assets/img/icons/addreactionplus.svg" (click)="toggleReactions($event)">
