--- a/src/app/mainscreen/header/searchbar/searchbar.component.scss
+++ b/src/app/mainscreen/header/searchbar/searchbar.component.scss
@@ -1,24 +1,45 @@
-#header-searchfield {
-    flex-grow: 1;
-    width: calc(100% - 24px);
-    border-radius: 42px;
-    height: 40px;
-    border: 0px;
-    padding-left: 24px;
+#header-searchfield-container{
+
+    position: relative;
+
+    #header-searchfield {
+        flex-grow: 1;
+        width: calc(100% - 24px);
+        border-radius: 42px;
+        height: 40px;
+        border: 0px;
+        padding-left: 24px;
+    }
+    #header-searchfield-icon{
+        position: absolute;
+        top: 8px; 
+        right: 12px;
+        width: 24px;
+    }
 }
 #header-searchfield-results{
     position: relative;
     border-radius: 42px;
     padding-left: 24px;
-    width: calc(100% - 24px);
+    padding-right: 24px;
+    width: calc(100% - 48px);
     background-color: white;
     z-index: 10;
     padding-bottom: 12px;
     padding-top: 12px;
+    margin-top: 12px;
     p{
         padding-left: 24px;
+        padding-right: 24px;
+        padding-top: 12px;
+        padding-bottom: 12px;
+        display: flex;
+        align-items: center;
+        margin: 0px;
         &:hover{
             background: rgba(166, 166, 166, 0.456);
+            border-radius: 42px;
         }
     }
 }
+
