--- a/src/app/mainscreen/mainscreen.component.html
+++ b/src/app/mainscreen/mainscreen.component.html
@@ -6,7 +6,7 @@
         <app-sidenav *ngIf="sideNavOpen" id="main-sidebar"></app-sidenav>
         <app-channel *ngIf="channelOpen && channelFirebaseService.selectedChannelId" id="main-channel"></app-channel>
         <!-- <app-channel *ngIf="!channelOpen" id="main-chat"></app-channel>-->
-        <app-thread  [class.dsp-none] = "!threadOpen" id="main-thread"></app-thread>
+        <app-thread  [class.dsp-none] = "!threadOpen" id="main-thread" *ngIf="threadFirebaseService.threadOpen"></app-thread>
     </div>
 </div>
 
