--- a/src/app/mainscreen/message/toolbar/toolbar.component.html
+++ b/src/app/mainscreen/message/toolbar/toolbar.component.html
@@ -8,7 +8,7 @@
         <img src="assets/img/icons/handsup.svg" (click)="handleEmojiSelection('🙌')">
         
         <img src="assets/img/icons/addreactionplus.svg" (click)="toggleReactions($event)">
-        <img *ngIf="message" src="assets/img/icons/answer.svg" (click)="messageFirebaseService.openThread(message)">
+        <img *ngIf="message" src="assets/img/icons/answer.svg" (click)="threadFirebaseService.openThread(message)">
 
         <div *ngIf="isOwnMessage" (blur)="hideOptions($event)" class="message-edit-container">
             <button mat-icon-button (click)="toggleOptions($event)">
