--- a/src/app/mainscreen/thread/thread.component.html
+++ b/src/app/mainscreen/thread/thread.component.html
@@ -1,3 +1,33 @@
 <mat-card id="thread" class="br-30">
-    <mat-card-content id="thread-content">Thread </mat-card-content> <span>{{ messageFirebaseService.message?.content }}</span>
+    <mat-card-content id="thread-content">
+        <div class="threadHeader">
+            <div><span>Thread</span>
+                <span class="channelNameHeader" *ngIf="message">
+                    # {{channelFirebaseService.selectedChannel?.channelName }}</span>
+            </div>
+            <img class="closeIcon" src="assets/img/icons/close.svg">
+        </div>
+
+        <div class="chat-container">
+            <div *ngFor="let message of messageFirebaseService.loadedAnswers; let i = index">
+                <app-message [message]="message" [messageLocationName]="'thread'"></app-message>
+                <ng-template [appIfChanged]="getMessageTimeString(message)">
+                    <app-date-line *ngIf="messageFirebaseService.loadedAnswers[i-1]"
+                        [messageTime]="getMessageTimeString(messageFirebaseService.loadedAnswers[i-1])"></app-date-line>
+                </ng-template>
+            </div>
+
+            <app-date-line *ngIf="messageFirebaseService.loadedAnswers[messageFirebaseService.loadedAnswers.length-1]"
+                [messageTime]="getMessageTimeString(messageFirebaseService.loadedAnswers[messageFirebaseService.loadedAnswers.length-1])">
+            </app-date-line>
+        </div>
+
+        <app-message-create path="message-path"></app-message-create>
+        <div *ngIf="threadFirebaseService.message">
+            {{ threadFirebaseService.message.path }}
+        </div>
+
+
+    </mat-card-content>
+
 </mat-card>
