added answer creation to thread

--- a/src/app/mainscreen/channel/channel.component.html
+++ b/src/app/mainscreen/channel/channel.component.html
@@ -29,5 +29,5 @@
         </app-date-line>
     </div>
 
-    <app-message-create></app-message-create>
+    <app-message-create [path]="messagePath"></app-message-create>
 </mat-card>
