small style updates

--- a/src/app/mainscreen/message/thread/thread.component.scss
+++ b/src/app/mainscreen/message/thread/thread.component.scss
@@ -18,7 +18,7 @@
 .chat-container {
     overflow-y: auto;
     display: flex;
-    flex-direction: column-reverse;
+    flex-direction: column;
     width: 100%;
 }
 
