--- a/src/app/startscreen/reset-password/reset-password.component.html
+++ b/src/app/startscreen/reset-password/reset-password.component.html
@@ -1,1 +1,61 @@
-<p>reset-password works!</p>
+<mat-card class="reset-password-container br-30">
+    <div class="reset-password-title">
+      <div>
+        <a  class="reset-password-icon">
+          <img src="./assets/img/icons/arrow_left_back.svg" />
+        </a>
+        <h1>Passwort zurücksetzen</h1>
+      </div>
+    </div>
+  
+    <form [formGroup]="contactForm" class="reset-passwort-input-container">
+      <div class="user-reset-box">
+        <input
+          class="user-input-password"
+          [ngClass]="{
+            warning:
+              contactForm.get('passwordInput')?.invalid &&
+              (contactForm.get('passwordInput')?.dirty ||
+                contactForm.get('passwordInput')?.touched)
+          }"
+          formControlName="passwordInput"
+          [placeholder]="'Neues Passwort'"
+          type="password"
+          name="password"
+          (focus)="isInputActive = true"
+          (blur)="isInputActive = false"
+        />
+      </div>
+  
+      <div class="user-reset-box">
+        <input
+          class="user-input-password"
+          [ngClass]="{
+            warning:
+              contactForm.get('passwordRepeatInput')?.invalid &&
+              (contactForm.get('passwordRepeatInput')?.dirty ||
+                contactForm.get('passwordRepeatInput')?.touched)
+          }"
+          formControlName="passwordRepeatInput"
+          [placeholder]="'Neues Kennwort bestätigen'"
+          type="password"
+          name="passwordRepeat"
+          (focus)="isInputActive = true"
+          (blur)="isInputActive = false"
+        />
+      </div>
+  
+      <div *ngIf="isInputActive && contactForm.get('passwordInput')?.dirty">
+        <span class="warning-password" *ngIf="!contactForm.get('passwordInput')?.valid">
+          {{ "Das Passwort muss mindestens ein Sonderzeichen, einen Groß-/Kleinbuchstaben haben und 6 Zeichen lang." }}
+        </span>
+      </div>
+
+      <div class="reset-password-button-container">
+        <button (click)="newPassword()" class="blue-button" mat-raised-button [disabled]="isButtonDisabled()" [ngClass]="{ 'disabled-button': isButtonDisabled() }">
+          Passwort ändern
+        </button>
+      </div>
+    </form>
+  </mat-card>
+  
