--- a/src/app/startscreen/reset-password/reset-password.component.scss
+++ b/src/app/startscreen/reset-password/reset-password.component.scss
@@ -1,3 +1,76 @@
+.startScreen-container {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100vh;
+  h3{
+      margin: 0;
+  }
+  
+ 
+}
+
+.uper-startscreen-container{
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  align-content: space-between;
+  align-items: center;
+  padding-top: 75px;
+  padding-bottom: 11px;
+
+}
+
+
+#startScreen-logo {
+  display: flex;
+  padding-left: 75px;
+  a{
+    text-decoration: none;
+    color: rgba(121, 126, 243, 1);
+    padding: 10px 15px;
+    font-size: 18px;
+    cursor: pointer;
+
+    &:hover{
+    border: 1px solid rgba(173, 176, 217, 1);
+    border-radius: 100px;
+    }
+}
+}
+
+#startScreen-register {
+  align-items: flex-end;
+  display: flex;
+  flex-direction: column;
+  padding-right: 75px;
+}
+
+
+#startscreen-imprint-container {
+  display: flex;
+  gap: 48px;
+  padding-top: 68px;
+  padding-bottom: 48px;
+
+  a{
+    text-decoration: none;
+    color: rgba(121, 126, 243, 1);
+    padding: 10px 15px;
+    font-size: 18px;
+    cursor: pointer;
+
+    &:hover{
+    border: 1px solid rgba(173, 176, 217, 1);
+    border-radius: 100px;
+    }
+}
+}
+
+
+
+
 .reset-password-container {
     display: flex;
     max-width: 692px;
