--- a/src/app/startscreen/forgot-password/forgot-password.component.scss
+++ b/src/app/startscreen/forgot-password/forgot-password.component.scss
@@ -108,6 +108,7 @@
   font-size: 18px;
   margin-top: 35px;
   background-color: rgba(68, 77, 242, 1) !important;
+  color: white !important;
 
   &:hover {
     background-color: rgba(121, 126, 243, 1) !important;
@@ -117,6 +118,7 @@
   &.disabled-button {
     background-color: gray !important;
     cursor: not-allowed;
+    color: white !important;
   }
 }
 
