--- a/src/app/startscreen/reset-password/reset-password.component.html
+++ b/src/app/startscreen/reset-password/reset-password.component.html
@@ -9,7 +9,7 @@
     <mat-card class="reset-password-container br-30" *ngIf="!imprint && !privacyPolicy">
         <div class="reset-password-title">
         <div>
-            <a  class="reset-password-icon">
+            <a  class="reset-password-icon" routerLink="/">
             <img src="./assets/img/icons/arrow_left_back.svg" />
             </a>
             <h1>Passwort zurücksetzen</h1>
