updated message create placeholder

--- a/src/app/mainscreen/channel/channel.component.html
+++ b/src/app/mainscreen/channel/channel.component.html
@@ -28,5 +28,5 @@
         </app-date-line>
     </div>
 
-    <app-message-create [path]="messagePath"></app-message-create>
+    <app-message-create [path]="messagePath" [currentLocation]="'channel'"></app-message-create>
 </mat-card>
