--- a/src/app/mainscreen/message/thread/thread.component.html
+++ b/src/app/mainscreen/message/thread/thread.component.html
@@ -28,7 +28,7 @@
         </div>
     </div>
 
-    <app-message-create [path]="answersPath"></app-message-create>
+    <app-message-create [path]="answersPath" [currentLocation]="'thread'"></app-message-create>
 
 
 
