--- a/src/app/mainscreen/message/message.component.html
+++ b/src/app/mainscreen/message/message.component.html
@@ -16,8 +16,7 @@
         </mat-card>
 
         <app-addreaction *ngIf="showMessageReactions" [isOpened]="showMessageReactions"
-            (emojiSelectedOutput)="handleEmojiSelection($event)"
-            (emojiBarVisibilityOutput)="handleEmojiBarVisibility($event)">
+            (emojiSelectedOutput)="handleEmojiSelection($event)">
         </app-addreaction>
 
         <div class='message-footer'>
