--- a/src/app/mainscreen/message/thread/thread.component.scss
+++ b/src/app/mainscreen/message/thread/thread.component.scss
@@ -24,12 +24,8 @@
         box-shadow: rgba(0, 0, 0, 0.8) 0 2px 23px -10px;
         padding: 0px 35px 0px 35px;
         border-radius: 30px 30px 0 0;
-        margin-bottom: 35px;
         display: flex;
         justify-content: space-between;
-        
-
-
 
         .header-title {
             display: flex;
@@ -45,7 +41,12 @@
         width: 100%;
         height: calc(100% - 50px);
 
-        app-date-line, .line-container{
+        app-message {
+            margin-top: 35px;
+        }
+
+        app-date-line,
+        .line-container {
             margin: 12px 35px 12px 35px;
         }
     }
