--- a/src/app/mainscreen/message/message.component.html
+++ b/src/app/mainscreen/message/message.component.html
@@ -1,7 +1,8 @@
 <div class='message-container' [ngClass]="{'inverted': isOwnMessage}" *ngIf="_message" (mouseleave)="closeToolbar()"
     (mouseenter)="openToolbar()">
     <app-toolbar *ngIf="showToolbar" [isOwnMessage]="isOwnMessage" [message]="_message"
-        [messageLocation]="messageLocation" (emojiSelectedOutput)="handleEmojiSelection($event)">
+        [messageLocation]="messageLocation" (emojiSelectedOutput)="handleEmojiSelection($event)"
+        (editMessageOutput)="handleMessageEdit($event)">
     </app-toolbar>
     <img src="{{ autorAvatar }}" class="message-img" *ngIf="autorAvatar">
     <div class="message-content" tabindex="0">
@@ -10,17 +11,23 @@
             <div> {{ getTimestamp(_message.timestamp) }}</div>
         </div>
 
-        <mat-card>
-
+        <mat-card *ngIf="!editMessage">
             <mat-card-content>{{ _message.content }}</mat-card-content>
         </mat-card>
 
-        <app-addreaction *ngIf="showMessageReactions" [isOpened]="showMessageReactions"
+        <app-addreaction *ngIf="showMessageReactions && !editMessage" [isOpened]="showMessageReactions"
             (emojiSelectedOutput)="handleEmojiSelection($event)">
         </app-addreaction>
 
+        <app-message-edit 
+            *ngIf="editMessage" 
+            [message]="_message" 
+            (showEditMessageOutput)="handleMessageEdit($event)">
+        </app-message-edit>
+
         <div class='message-footer'>
-            <div *ngIf="this.messageFirebaseService.loadedAnswers.length > 0 && messageLocation == 'channel'"
+            <div class="answers-link"
+                *ngIf="this.messageFirebaseService.loadedAnswers.length > 0 && messageLocation == 'channel'"
                 (click)="threadFirebaseService.openThread(_message)">
                 {{ this.messageFirebaseService.loadedAnswers.length }} Antworten
             </div>
