--- a/src/app/mainscreen/message/reaction/reaction.component.scss
+++ b/src/app/mainscreen/message/reaction/reaction.component.scss
@@ -3,5 +3,7 @@ div {
     border-radius: 20px;
     padding: 5px 10px 5px 10px;
     display: flex;
-    gap: 10px
+    gap: 10px;
+    margin: 2px;
+    cursor: pointer;
 }
