--- a/src/app/mainscreen/message/message-edit/message-edit.component.html
+++ b/src/app/mainscreen/message/message-edit/message-edit.component.html
@@ -1,12 +1,18 @@
 <app-addreaction *ngIf="showEmojiBar" (emojiSelectedOutput)="handleEmojiSelection($event)"></app-addreaction>
 <div class="msg-edit-container" *ngIf="_message">
-    <div class='option-icons'>
+    <div class='options'>
         <div class="msg-mods">
             <img src="assets/img/icons/addreaction.svg" (click)="toggleEmojiBar($event)">
         </div>
-        <div class="msg-send">
-            <img src="assets/img/icons/send.svg" (click)="saveMessage()">
+        <div class="msg-submit-options">
+            <div class="msg-send">
+                <button (click)="saveMessage()">Zurück</button>
+            </div>
+            <div class="msg-send">
+                <button (click)="saveMessage()">Speichern</button>
+            </div>
         </div>
+
     </div>
     <textarea cdkTextareaAutosize #messageCreate class="msg-write-container" [(ngModel)]="_message.content"
         *ngIf="channelFirebaseService.selectedChannel"  (click)="closeEmojiBar()">
